# toy-scheme

./: .gitignore  .gitmodules  Makefile  README.md  ast.cpp  ast.hpp  main.cpp  parser.cpp  tmp.scm  token.hpp
assembler/: Makefile  assembler.cpp  assembler.hpp  assermbler.cpp  assermbler.hpp  bit-operation.cpp  bit-operation.hpp  enum2str.hpp  enum2str_test.cpp  main  main.cpp
compiler/: .gitignore  Makefile  alias.hpp  ast.cpp  ast.hpp  closure.cpp  closure.hpp  closure_table.cpp  closure_table.hpp  code_generator.cpp  code_generator.hpp  cps.cpp  cps.hpp  data_type.cpp  data_type.hpp  lexical_scope.cpp  lexical_scope.hpp  main.cpp  parser.cpp  parser.hpp  registers.cpp  registers.hpp  sem_analyser.cpp  sem_analyser.hpp  sem_analyzer.cpp  sem_analyzer.hpp  simple_register_allocator.cpp  simple_register_allocator.hpp  symbol_table.cpp  symbol_table.hpp  test.scm  test_translate.cpp  three_address_code.cpp  three_address_code.hpp  tmp.test.scm  token.cpp  token.hpp  util.hpp
ocaml-compiler/compiler/lib/: admBetaTrans.ml  admBetaTrans.mli  admReduction.ml  admReduction.mli  alphaTrans.mli  ast.ml  ast.mli  astDump.ml  astDump.mli  astType.mli  closure.ml  closure.mli  closureRef.ml  closureRef.mli  closureTrans.ml  closureTrans.mli  closureType.mli  codeToInterlang.ml  codeToInterlang.mli  cps.ml  cps.mli  cpsTrans.ml  cpsTrans.mli  deBruijnIndex.ml  deBruijnIndex.mli  deBruijnIndexTrans.ml  deBruijnIndexTrans.mli  deBruijnIndexType.mli  dump.ml  dump.mli  dune  interlang.mli  interlangCompiler.ml  interlangCompiler.mli  interlangDecompiler.ml  interlangType.mli  lexer.mll  parser.mly  refType.mli  renameCps.ml  (+5 more)
ocaml-compiler/src/compiler/: 3  aNType.mli  aNormalization.ml  aNormalization.mli  abstractMachine.ml  abstractMachine.mli  abstractMachineType.mli  admBetaReduction.ml  admBetaReduction.mli  admBetaTrans.ml  admBetaTrans.mli  alphaTrans.ml  anfType.mli  ast.ml  ast.mli  astType.mli  closure.ml  closure.mli  closureType.mli  cps.ml  cps.mli  cpsType.mli  deBruijnIndex.ml  dune  interlangCompiler.ml  interlangDecompiler.mli  lexer.mll  liveness.ml  liveness.mli  livnessAnalysis.ml  livnessAnalysis.mli  parser.mly  regAlloc.ml  regAlloc.mli  registerAllocate.ml  registerAllocate.mli  regs.ml  regs.mli  regsType.mli  riscvGenerator.ml  (+9 more)
ocaml-compiler/src/test/: dune  testANormalize.ml  testAbstractMachine.ml  testAst.ml  testBetaReduction.ml  testClosure.ml  testCompiler.ml  testCps.ml  testDecompiler.ml  testGraph.ml  testLivness.ml  testParser.ml  testRegAlloc.ml  testUtil.ml  testUtil.mli
ocaml-compiler/src/test/assm/: .gitignore  Makefile  debug.sh  dune  fib.asm  link.ld  parser.py  testRiscvAssm.ml  testSimulator.ml  uart.py
ocaml-compiler/src/test/compiler/: dune  testANormalize.ml  testAbstractMachine.ml  testAst.ml  testBetaReduction.ml  testClosure.ml  testCompiler.ml  testCps.ml  testDecompiler.ml  testGraph.ml  testLivness.ml  testRegAlloc.ml
ocaml-compiler/src/test/misc/: dune  testUtil.ml  testUtil.mli
(+76 files in other folders)
