(ocamllex lexer)

(menhir
  (modules parser))
  
(library
  (modules_without_implementation ast 
                                  cps 
                                  deBruijnIndex
                                  closure)
  (name compiler))

(env
  (dev
    (flags (:standard -warn-error -A))))
