(ocamllex lexer)

(menhir
  (modules parser))
  
(library
  (modules_without_implementation ast 
                                  cps 
                                  deBruijnIndex
                                  interlang
                                  closure)
  (name compiler))

(env
  (dev
    (flags (:standard -warn-error -A))))
