(ocamllex lexer)

(menhir
  (modules parser))
  
(library
  (libraries util)
  (modules_without_implementation symbolType
                                  astType
                                  cpsType
                                  closureType
                                  abstractMachineType
                                  threeAddressCodeType
                                  riscvInstr
                                  anfType)
  (name compiler))

(env
  (dev
    (flags (:standard -warn-error -A))))
