(ocamllex lexer)

(menhir
  (modules parser))
  
(library
  (libraries util)
  (modules_without_implementation symbolType
                                  astType
                                  cpsType
                                  closureType
                                  regsType
                                  abstractMachineType
                                  threeAddressCodeType
                                  anfType)
  (name compiler))

(env
  (dev
    (flags (:standard -warn-error -A))))
