(tests
  (libraries compiler)
  (names testAst
         testCps
         testBetaReduction
         testANormalize
         testClosure
         testAbstractMachine
         testGraph
         testLivness
         testRegAlloc
         testCompiler))
(env
  (dev
    (flags (:standard -warn-error -A))))
